<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="sheridan.sharmupm.restmanagerapplication.application.userCreate.UserCreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="sheridan.sharmupm.restmanagerapplication.presentation.userManagement.userDetail.UserDetailFragment">

        <ImageView
            android:id="@+id/usr_crt_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/user_detail_image_of_user"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/usr_crt_btn_upload_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_create_btn_upload_picture" />

        <TextView
            android:id="@+id/usr_crt_txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_create_id" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_name_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_name_first"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_name_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_name_last"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_create_phone"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_create_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_address_street_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_address_street_1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_address_street_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_address_street_2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_address_city"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_address_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_address_postal"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usr_crt_ed_txt_address_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_create_address_country"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/usr_crt_btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_create_btn_confirm" />

            <Button
                android:id="@+id/usr_crt_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_create_btn_cancel" />

        </LinearLayout>
    </LinearLayout>
</layout>